fix(cluster-test): fix simple cluster test